 - gui: added support for high-DPI systems using a global scaling factor (with hints from OS)
 - gui: added vertex_cache to speed up rendering (only available with OpenGL renderer)
 - gui: added texture atlases to speed up rendering
 - gui: added quad batching to speed up rendering
 - gui: added localizer class for handling languages, translations, and string formatting
 - gui: font_string can now render icons/smileys mixed with the rendered text
 - gui: fonts are no longer limited to the first 255 unicode characters
 - gui: the order in which widgets are created from XML is now tightly specified. For any frame:
    - the frame itself is created (without any of its regions or children)
    - the special regions are created (e.g., slider thumb texture, button texture, etc.)
    - the regions are created, in order of declaration in the XML file
    - the special frames are created (e.g., scroll child)
    - the children frames are created, in order of declaration in the XML file
 - gui: scripts are now handled with signals and slots in C++, for better control of lifetime
 - gui: inherited scripts will be preserved and executed before the scripts defined in the frames
 - gui: focus is now handled as a stack rather than binary
 - gui: keyboard input is now given to topmost frame registered for the pressed key
 - lua: removed custom lua wrapper, using sol2 instead
 - xml: removed custom xml parser, using pugixml instead
 - yaml: added yaml parser for GUI layout

Other changes:
 - general: various fixes and improvements to the build system
 - general: fixed various warnings and minor bugs detected by clang
 - general: moved away from using reference-counted smart pointers whenever possible
 - general: moved all code into the lxgui namespace
 - general: exceptions now inherit from std::exception
 - general: moved all enums to C++11 enum class
 - general: added C++11 noexcept specifiers where appropriate